# MLOps_2026

./: .gitignore  .pre-commit-config.yaml  README.md  assignment_2.md  bench_gpu_array_big.job  bench_gpu_array_small.job  bench_gpu_course.job  bench_thin_course.job  check_data.py  gpu_train_script.sh  gpu_training_18392821.out  gpu_training_18414629.out  gpu_training_18414755.out  gpu_training_18414824.out  gpu_training_18415031.out  gpu_training_18415352.out  gpu_training_18532033.out  gpu_training_error_18392821.err  gpu_training_error_18414362.err  gpu_training_error_18414629.err  gpu_training_error_18414755.err  gpu_training_error_18414824.err  gpu_training_error_18415031.err  gpu_training_script_18390318.out  plot_eda_script.sh  pyproject.toml  requirements.txt  sweep.sh  trainer_tracker.pt
.github/workflows/: ci.yml
assets/tabels/: q8_big_throughput.csv  q8_big_throughput.md  q8_small_throughput.csv  q8_small_throughput.md
experiments/: benchmark_throughput.py  gpu_train_script.sh  train.py
experiments/configs/: train_config.yaml  train_config_seed43.yaml  train_config_seed44.yaml
output_assignment_1_nick/: gpu_training_script_18231880.out  gpu_training_script_18242614.out  gpu_training_script_18242622.out
question-4-train-scripts/: gpu_train_script_seed42.sh  gpu_train_script_seed43.sh  gpu_train_script_seed44.sh
scripts/: average_metrics.py  confusion_matrix.py  error_analysis_q6.py  generate_pr_curve.py  inference.py  make_big_benchmark_table.py  make_small_benchmark_table.py  torch_example.py
tests/: test_data_loader.py  test_model_shapes.py
(+12 files in other folders)
